Fix for .container-md being too small

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -27,7 +27,7 @@ $unit-xxl:	40px;
 //--------------------------------------------------------------------
 
 $width-sm: 480px;
-$width-md: 624px;
+$width-md: 680px;
 $width-lg: 900px;
 $width-xl: 1200px;
 
